--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,22 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            Home
+        </ion-title>
+        <ion-buttons slot="start">
+            <ion-menu-button menu="main-menu"></ion-menu-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-header collapse="condense">
+        <ion-icon id="logoIOT" src="./assets/icon/logoIOT.svg"></ion-icon>
+        <ion-toolbar>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+            <ion-title size="large">IoTAFA</ion-title>
+        </ion-toolbar>
+    </ion-header>
+
+    <app-explore-container name="Admin Dashboard"></app-explore-container>
 </ion-content>
