--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,22 +1,22 @@
 ion-title {
-    text-align: left;
+    text-align: Center;
     font-size: 22px;
-    color: black;
+    color: rgb(84, 135, 230);
 }
 
 ion-toolbar {
-    --background: #dceceec77;
+    --background: #bae98f96;
 }
 
 #logoIOT {
-    width: 100px;
-    height: 70px;
+    width: 110px;
+    height: 80px;
     align-items: center;
     text-align: center;
-    padding-left: 125px;
-    padding-bottom: 5px;
+    padding-left: 132px;
+    padding-bottom: 26px;
 }
 
 ion-content {
-    --background: #dceceec7;
+    --background: #c5f19b96;
 }
