--- a/src/app/device-template/add-device-template/device-template-command/device-template-command.component.html
+++ b/src/app/device-template/add-device-template/device-template-command/device-template-command.component.html
@@ -1,6 +1,6 @@
 <ion-item>
-    <ion-label position="stacked">Device template Command name</ion-label>
-    <ion-input placeholder="Enter device template Command name"></ion-input>
+    <ion-label position="stacked">Command name</ion-label>
+    <ion-input placeholder="Enter Command name"></ion-input>
 </ion-item>
 <ion-item>
     <ion-label>isSynchronous</ion-label>
