--- a/src/app/device-template/add-device-template/device-template-property/device-template-property.component.html
+++ b/src/app/device-template/add-device-template/device-template-property/device-template-property.component.html
@@ -1,6 +1,6 @@
 <ion-item>
-    <ion-label position="stacked">Device template property name</ion-label>
-    <ion-input placeholder="Device template property name"></ion-input>
+    <ion-label position="stacked">Property name</ion-label>
+    <ion-input placeholder="Property name"></ion-input>
 </ion-item>
 <ion-item>
     <ion-label>isWritable</ion-label>
