--- a/src/app/caregivers/add-caregiver/add-caregiver.page.html
+++ b/src/app/caregivers/add-caregiver/add-caregiver.page.html
@@ -30,6 +30,7 @@
         <ion-item lines="full">
             <ion-label position="floating">Email</ion-label>
             <ion-input type="text" required></ion-input>
+
         </ion-item>
 
         <ion-item lines="full">
@@ -39,7 +40,7 @@
 
         <ion-item lines="full">
             <ion-label position="floating">Password confirmation</ion-label>
-            <ion-input type="text" required></ion-input>
+            <ion-input type="password" required></ion-input>
         </ion-item>
         <ion-item lines="full">
             <ion-label position="floating">Date of birth</ion-label>
