--- a/src/app/device-template/device-template.page.html
+++ b/src/app/device-template/device-template.page.html
@@ -17,7 +17,7 @@
         <ion-list-header>
             <ion-label>List of device templates</ion-label>
         </ion-list-header>
-        <ion-item>
+        <ion-item [routerLink]="['profile-device-template']">
             <ion-avatar slot="start">
                 <img src="assets/icon/deviceTemplate.svg">
             </ion-avatar>
