--- a/src/app/disability-profile/disability-profile.page.html
+++ b/src/app/disability-profile/disability-profile.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
     <div class="ion-text-right">
-        <ion-button expand="full" shape="round" fill="outline">+Add disability profile
+        <ion-button expand="full" shape="round" fill="outline" [routerLink]="['add-disability-profile']">+Add disability profile
             <ion-icon slot="end" size="large" src="assets/icon/disability.svg"></ion-icon>
         </ion-button>
     </div>
