--- a/src/app/device-template/device-template-all-components/device-template-command/device-template-command.component.html
+++ b/src/app/device-template/device-template-all-components/device-template-command/device-template-command.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="commandForm" (ngSubmit)="onSubmit()"></form>
+<!-- <form [formGroup]="commandForm" (ngSubmit)="onSubmit()"></form>
 
 <div formArrayName="ArrayCommands" *ngFor="let command of commands().controls; let i=index">
 
@@ -8,15 +8,15 @@
             <ion-label position="stacked">Name</ion-label>
             <ion-input name="name" type="text" formControlName="name"></ion-input>
         </ion-item>
-        <!--    <ion-item>
+        <ion-item>
                 <ion-label>isSynchronous</ion-label>
                 <ion-toggle name="isSyn" formControlName="isSyn"></ion-toggle>
-            </ion-item> -->
-        <button (click)="removeCommand(i)">Remove</button>
-    </div>
+            </ion-item> 
+<button (click)="removeCommand(i)">Remove</button>
+</div>
 
 </div>
 <button type="submit">Submit</button>
 </form>
 
-<button type="button" (click)="addCommands()">Add another command</button>
+<button type="button" (click)="addCommands()">Add another command</button> -->
