--- a/src/app/device-template/device-template.page.html
+++ b/src/app/device-template/device-template.page.html
@@ -9,34 +9,27 @@
 
 <ion-content>
     <div class="ion-text-right">
-        <ion-button expand="full" shape="round" fill="outline" [routerLink]="['add-device-template']">+Add device template
-            <ion-icon slot="end" size="large" src="assets/icon/deviceTemplate.svg"></ion-icon>
-        </ion-button>
+        <ion-button rel="rel" expand="full" size="default" shape="round" fill="solid" [routerLink]="['add-device-template']">Add device template</ion-button>
     </div>
+    <ion-list-header>
+        <ion-label>List of device templates</ion-label>
+    </ion-list-header>
     <ion-list>
-        <ion-list-header>
-            <ion-label>List of device templates</ion-label>
-        </ion-list-header>
+        <ion-item-sliding>
+            <ion-item lines="inset" detail [routerLink]="['profile-device-template']">
 
-        <ion-item [routerLink]="['profile-device-template']">
-            <ion-avatar slot="start">
-                <img src="assets/icon/deviceTemplate.svg">
-            </ion-avatar>
-            <ion-label>Device template 1</ion-label>
-        </ion-item>
+                <ion-avatar slot="start">
+                    <img src="assets/icon/deviceTemplate.svg">
+                </ion-avatar>
+                <ion-label>Device template 1</ion-label>
+            </ion-item>
 
-        <ion-item>
-            <ion-avatar slot="start">
-                <img src="assets/icon/deviceTemplate.svg">
-            </ion-avatar>
-            <ion-label>Device template 2</ion-label>
-        </ion-item>
-
-        <ion-item>
-            <ion-avatar slot="start">
-                <img src="assets/icon/deviceTemplate.svg">
-            </ion-avatar>
-            <ion-label>Device template 3</ion-label>
-        </ion-item>
+            <ion-item-options side="end">
+                <ion-item-option color="danger" (click)="null" expandable>
+                    <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
     </ion-list>
+
 </ion-content>
