--- a/src/app/device-template/profile-device-template/profile-device-template.page.html
+++ b/src/app/device-template/profile-device-template/profile-device-template.page.html
@@ -50,7 +50,7 @@
 
     <ion-list>
         <ion-item-sliding>
-            <ion-item lines="inset" detail [routerLink]="['profile-device-template']">
+            <ion-item lines="inset" detail [routerLink]="['properties']">
 
                 <ion-avatar slot="start">
                     <img src="assets/icon/deviceTemplate.svg">
@@ -67,7 +67,7 @@
     </ion-list>
     <ion-list>
         <ion-item-sliding>
-            <ion-item lines="inset" detail [routerLink]="['profile-device-template']">
+            <ion-item lines="inset" detail [routerLink]="['commands']">
 
                 <ion-avatar slot="start">
                     <img src="assets/icon/deviceTemplate.svg">
