--- a/src/app/device-template/list-properties/list-properties.page.html
+++ b/src/app/device-template/list-properties/list-properties.page.html
@@ -1,9 +1,37 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>list-properties</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-back-button slot="start"></ion-back-button>
+        <ion-title class="ion-text-center">Properties</ion-title>
+
+        <ion-icon class="ionadd" name="add-circle-outline" size="large" slot="end" [routerLink]="['add-property']"></ion-icon>
+
+
+
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <ion-list-header>
+        <ion-label>List of properties</ion-label>
+
+    </ion-list-header>
+
+    <ion-list>
+        <ion-item-sliding>
+            <ion-item lines="inset" detail [routerLink]="['profile']">
+
+                <ion-avatar slot="start">
+                    <img src="assets/icon/deviceTemplate.svg">
+                </ion-avatar>
+                <ion-label>Property 1</ion-label>
+            </ion-item>
+
+            <ion-item-options side="end">
+                <ion-item-option color="danger" (click)="null" expandable>
+                    <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
 
 </ion-content>
