--- a/src/app/device-template/list-telemetries/list-telemetries.page.html
+++ b/src/app/device-template/list-telemetries/list-telemetries.page.html
@@ -1,9 +1,41 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>list-telemetries</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-back-button slot="start"></ion-back-button>
+        <ion-title class="ion-text-center">Telemetries</ion-title>
+
+        <ion-icon class="ionadd" name="add-circle-outline" size="large" slot="end" [routerLink]="['profile-telemetry']"></ion-icon>
+
+
+
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <!--  <div class="ion-text-right">
+      <ion-button rel="rel" expand="full" size="default" shape="round" fill="solid" [routerLink]="['add-device-template']">Add device template</ion-button>
+  </div> -->
+
+    <ion-list-header>
+        <ion-label>List of telemetries</ion-label>
+
+    </ion-list-header>
+
+    <ion-list>
+        <ion-item-sliding>
+            <ion-item lines="inset" detail [routerLink]="['profileTelemetry']">
+
+                <ion-avatar slot="start">
+                    <img src="assets/icon/deviceTemplate.svg">
+                </ion-avatar>
+                <ion-label>Telemetry 1</ion-label>
+            </ion-item>
+
+            <ion-item-options side="end">
+                <ion-item-option color="danger" (click)="null" expandable>
+                    <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+    </ion-list>
 
 </ion-content>
