--- a/src/app/device-template/profile-property/profile-property.page.html
+++ b/src/app/device-template/profile-property/profile-property.page.html
@@ -1,5 +1,6 @@
 <ion-header>
     <ion-toolbar>
+        <ion-back-button slot="start"></ion-back-button>
         <ion-title>profile-property</ion-title>
     </ion-toolbar>
 </ion-header>
