--- a/src/app/device-template/profile-telemetry/profile-telemetry.page.html
+++ b/src/app/device-template/profile-telemetry/profile-telemetry.page.html
@@ -1,7 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>profile-telemetry</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-back-button slot="start"></ion-back-button>
+        <ion-title>profile-telemetry</ion-title>
+
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
