--- a/src/app/device-template/add-telemetry/add-telemetry.page.html
+++ b/src/app/device-template/add-telemetry/add-telemetry.page.html
@@ -106,6 +106,9 @@
                 <ion-select-option value="OID">OID</ion-select-option>
             </ion-select>
         </ion-item>
-        <ion-button expand="block " shape="round " fill="solid " type="submit" class="btn btn-block btn-success" [disabled]="!telemetryForm.valid">Add telemetry</ion-button>
+        <ion-button slot="start" shape="round " fill="solid " type="submit" class="btn btn-block btn-success" [disabled]="!telemetryForm.valid">
+            Add telemetry
+        </ion-button>
+        <ion-button slot="end" shape="round " color="danger" size="small" (click)="emptyArray()">Cancel</ion-button>
     </form>
 </ion-content>
