--- a/src/app/device-template/device-template.page.html
+++ b/src/app/device-template/device-template.page.html
@@ -21,21 +21,21 @@
     </ion-list-header>
 
     <ion-list>
-        <div class="telemetry" *ngFor="let deviceTemplate of listDeviceTemplates |keyvalue">
+        <div class="telemetry" *ngFor="let deviceTemplate of listDeviceTemplates">
             <ion-item-sliding>
                 <ion-item lines="inset" detail [routerLink]="['profile-device-template']">
 
                     <ion-avatar slot="start">
                         <img src="assets/icon/deviceTemplate.svg">
                     </ion-avatar>
-                    <ion-label>{{deviceTemplate.value.Name}}</ion-label>
-
-                    <!-- <ion-label>Device template 1</ion-label> -->
+                    <ion-label>{{deviceTemplate['Name']}}</ion-label>
                 </ion-item>
 
                 <ion-item-options side="end">
-                    <ion-item-option color="danger" (click)="null" expandable>
+                    <ion-item-option color="danger" (click)="deleteDeviceTemplate(deviceTemplate['Id'], deviceTemplate['Name'])" expandable>
+
                         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+
                     </ion-item-option>
                 </ion-item-options>
             </ion-item-sliding>
