--- a/src/app/device-template/device-template.page.html
+++ b/src/app/device-template/device-template.page.html
@@ -23,7 +23,7 @@
     <ion-list>
         <div class="telemetry" *ngFor="let deviceTemplate of listDeviceTemplates">
             <ion-item-sliding>
-                <ion-item lines="inset" detail [routerLink]="['profile-device-template']">
+                <ion-item lines="inset" detail [routerLink]="['profile-device-template',deviceTemplate['Id']]">
 
                     <ion-avatar slot="start">
                         <img src="assets/icon/deviceTemplate.svg">
