--- a/src/app/device-template/list-commands/list-commands.page.html
+++ b/src/app/device-template/list-commands/list-commands.page.html
@@ -1,9 +1,45 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>list-commands</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-back-button slot="start"></ion-back-button>
+        <ion-title class="ion-text-center">Commands</ion-title>
+
+        <ion-icon class="ionadd" name="add-circle-outline" size="large" slot="end" [routerLink]="['profile-command']"></ion-icon>
+
+
+
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <!--  <div class="ion-text-right">
+    <ion-button rel="rel" expand="full" size="default" shape="round" fill="solid" [routerLink]="['add-device-template']">Add device template</ion-button>
+</div> -->
+
+    <ion-list-header>
+        <ion-label>List of commands</ion-label>
+
+    </ion-list-header>
+
+    <ion-list>
+        <div class="telemetry" *ngFor="let deviceCommand of deviceTemplateCommands">
+
+            <ion-item-sliding>
+                <ion-item lines="inset" detail [routerLink]="['profileCommands']">
+
+
+                    <ion-avatar slot="start">
+                        <img src="../../../assets/icon/deviceTemplate.svg">
+                    </ion-avatar>
+                    <ion-label>{{deviceCommand['Name']}}</ion-label>
+                </ion-item>
+
+                <ion-item-options side="end">
+                    <ion-item-option color="danger" (click)="null" expandable>
+                        <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+        </div>
+    </ion-list>
 
 </ion-content>
