--- a/src/app/device-template/list-properties/list-properties.page.html
+++ b/src/app/device-template/list-properties/list-properties.page.html
@@ -3,7 +3,7 @@
         <ion-back-button slot="start"></ion-back-button>
         <ion-title class="ion-text-center">Properties</ion-title>
 
-        <ion-icon class="ionadd" name="add-circle-outline" size="large" slot="end" [routerLink]="['add-property']"></ion-icon>
+        <ion-icon class="ionadd" name="add-circle-outline" size="large" slot="end" [routerLink]="['profile-property']"></ion-icon>
 
 
 
@@ -11,27 +11,35 @@
 </ion-header>
 
 <ion-content>
+    <!--  <div class="ion-text-right">
+    <ion-button rel="rel" expand="full" size="default" shape="round" fill="solid" [routerLink]="['add-device-template']">Add device template</ion-button>
+</div> -->
+
     <ion-list-header>
         <ion-label>List of properties</ion-label>
 
     </ion-list-header>
 
     <ion-list>
-        <ion-item-sliding>
-            <ion-item lines="inset" detail [routerLink]="['profile']">
+        <div class="telemetry" *ngFor="let deviceProperty of deviceTemplateProperties">
 
-                <ion-avatar slot="start">
-                    <img src="assets/icon/deviceTemplate.svg">
-                </ion-avatar>
-                <ion-label>Property 1</ion-label>
-            </ion-item>
+            <ion-item-sliding>
+                <ion-item lines="inset" detail [routerLink]="['profileCommands']">
 
-            <ion-item-options side="end">
-                <ion-item-option color="danger" (click)="null" expandable>
-                    <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
+
+                    <ion-avatar slot="start">
+                        <img src="../../../assets/icon/deviceTemplate.svg">
+                    </ion-avatar>
+                    <ion-label>{{deviceProperty['Name']}}</ion-label>
+                </ion-item>
+
+                <ion-item-options side="end">
+                    <ion-item-option color="danger" (click)="null" expandable>
+                        <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+        </div>
     </ion-list>
 
 </ion-content>
