--- a/src/app/device-template/list-telemetries/list-telemetries.page.html
+++ b/src/app/device-template/list-telemetries/list-telemetries.page.html
@@ -21,21 +21,25 @@
     </ion-list-header>
 
     <ion-list>
-        <ion-item-sliding>
-            <ion-item lines="inset" detail [routerLink]="['profileTelemetry']">
+        <div class="telemetry" *ngFor="let deviceTelemetry of deviceTemplateTelemetries">
 
-                <ion-avatar slot="start">
-                    <img src="assets/icon/deviceTemplate.svg">
-                </ion-avatar>
-                <ion-label>Telemetry 1</ion-label>
-            </ion-item>
+            <ion-item-sliding>
+                <ion-item lines="inset" detail [routerLink]="['profile-telemetry']">
 
-            <ion-item-options side="end">
-                <ion-item-option color="danger" (click)="null" expandable>
-                    <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
+
+                    <ion-avatar slot="start">
+                        <img src="../../../assets/icon/deviceTemplate.svg">
+                    </ion-avatar>
+                    <ion-label>{{deviceTelemetry['Name']}}</ion-label>
+                </ion-item>
+
+                <ion-item-options side="end">
+                    <ion-item-option color="danger" (click)="null" expandable>
+                        <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+                    </ion-item-option>
+                </ion-item-options>
+            </ion-item-sliding>
+        </div>
     </ion-list>
 
 </ion-content>
