Problema perfil telemetry

--- a/src/app/device-template/list-commands/list-commands.page.html
+++ b/src/app/device-template/list-commands/list-commands.page.html
@@ -34,7 +34,7 @@
                 </ion-item>
 
                 <ion-item-options side="end">
-                    <ion-item-option color="danger" (click)="null" expandable>
+                    <ion-item-option color="danger" expandable>
                         <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                     </ion-item-option>
                 </ion-item-options>
