--- a/src/app/device-template/profile-device-template/profile-device-template.page.html
+++ b/src/app/device-template/profile-device-template/profile-device-template.page.html
@@ -48,7 +48,7 @@
             </ion-item>
 
             <ion-item-options side="end">
-                <ion-item-option color="danger" (click)="null" expandable>
+                <ion-item-option color="danger" expandable>
                     <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
@@ -66,7 +66,7 @@
             </ion-item>
 
             <ion-item-options side="end">
-                <ion-item-option color="danger" (click)="null" expandable>
+                <ion-item-option color="danger" expandable>
                     <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
@@ -83,7 +83,7 @@
             </ion-item>
 
             <ion-item-options side="end">
-                <ion-item-option color="danger" (click)="null" expandable>
+                <ion-item-option color="danger" expandable>
                     <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
