ngFor error Arreglado

--- a/src/app/device-template/add-device-template/add-device-template.page.html
+++ b/src/app/device-template/add-device-template/add-device-template.page.html
@@ -29,8 +29,8 @@
                 <div class="error" *ngIf="deviceTemplateForm.controls.type.errors && deviceTemplateForm.controls.type.touched">
                     Please fill out this field
                 </div>
-                <ion-select-option value="sensor">Sensor</ion-select-option>
-                <ion-select-option value="actuator">Actuator</ion-select-option>
+                <ion-select-option value="1">Sensor</ion-select-option>
+                <ion-select-option value="2">Actuator</ion-select-option>
             </ion-select>
         </ion-item>
         <!-- 
