--- a/src/app/device-template/add-telemetry/add-telemetry.page.html
+++ b/src/app/device-template/add-telemetry/add-telemetry.page.html
@@ -56,7 +56,6 @@
 
 
 
-
         </div>
     </div>
 
@@ -111,4 +110,8 @@
         </ion-button>
         <ion-button slot="end" shape="round " color="danger" size="small" (click)="emptyArray()">Cancel</ion-button>
     </form>
+    <ion-item detail [routerLink]="['SpecificTelemetry']">
+        <ion-label>Specific Telemetry</ion-label>
+    </ion-item>
+
 </ion-content>
