--- a/src/app/device-template/list-commands/list-commands.page.html
+++ b/src/app/device-template/list-commands/list-commands.page.html
@@ -24,7 +24,7 @@
         <div class="telemetry" *ngFor="let deviceCommand of deviceTemplateCommands">
 
             <ion-item-sliding>
-                <ion-item lines="inset" detail [routerLink]="['profileCommands']">
+                <ion-item lines="inset" detail [routerLink]="['profile-command']">
 
 
                     <ion-avatar slot="start">
