--- a/src/app/device-template/specific-telemetry/specific-telemetry.page.html
+++ b/src/app/device-template/specific-telemetry/specific-telemetry.page.html
@@ -1,7 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>specific-telemetry</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+
+        <ion-back-button slot="start"></ion-back-button>
+        <ion-title class="ion-text-center">specific-telemetry </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
