--- a/src/app/device-template/list-properties/list-properties.page.html
+++ b/src/app/device-template/list-properties/list-properties.page.html
@@ -3,7 +3,7 @@
         <ion-back-button slot="start"></ion-back-button>
         <ion-title class="ion-text-center">Properties</ion-title>
 
-        <ion-icon class="ionadd" name="add-circle-outline" size="large" slot="end" [routerLink]="['profile-property']"></ion-icon>
+        <ion-icon class="ionadd" name="add-circle-outline" size="large" slot="end" [routerLink]="['profileProperty']"></ion-icon>
 
 
 
@@ -24,7 +24,7 @@
         <div class="telemetry" *ngFor="let deviceProperty of deviceTemplateProperties">
 
             <ion-item-sliding>
-                <ion-item lines="inset" detail [routerLink]="['profileCommands']">
+                <ion-item lines="inset" detail [routerLink]="['profileProperty']">
 
 
                     <ion-avatar slot="start">
