--- a/src/app/device-template/list-telemetries/list-telemetries.page.html
+++ b/src/app/device-template/list-telemetries/list-telemetries.page.html
@@ -24,7 +24,7 @@
         <div class="telemetry" *ngFor="let deviceTelemetry of deviceTemplateTelemetries">
 
             <ion-item-sliding>
-                <ion-item lines="inset" detail [routerLink]="['profile-telemetry']">
+                <ion-item lines="inset" detail [routerLink]="['profileTelemetry',deviceTelemetry['Id']]">
 
 
                     <ion-avatar slot="start">
