--- a/src/app/device-template/device-template.page.scss
+++ b/src/app/device-template/device-template.page.scss
@@ -1,3 +1,17 @@
 .ionadd {
     margin-right: 15px;
 }
+
+
+/* DOES NOT WORK - not specific enough */
+
+ion-loading {
+    color: green;
+}
+
+
+/* Works - pass "my-custom-class" in cssClass to increase specificity */
+
+.my-custom-class {
+    color: green;
+}
